--- a/app/styles/sass/blocks/_general.sass
+++ b/app/styles/sass/blocks/_general.sass
@@ -36,10 +36,10 @@
 	top: 30%
 	z-index: 50
 	width: 100%
-	max-width: 800px
+	max-width: 600px
 	line-height: 1.3
 .top__slide--title
-	font-size: 48px
+	font-size: 44px
 	font-weight: 400
 .top__slide--text
 	font-size: 26px
@@ -72,10 +72,15 @@
 	opacity: 0.4
 	width: 80px
 	height: 80px
+	transition: opacity 0.3s ease-in
+	&:hover
+		opacity: 0.9
+		transition: opacity 0.3s ease-in
 	&::after
 		color: #fff
 		font-size: 24px
 		font-weight: 700
+
 .swiper-button-prev
 	left: 0
 .swiper-button-next
